--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+.idea
+.vscode
+*/.DS_Store
+main.exe
+main
+go.sum
